Big refactor, bug fixes.